--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,10 @@ layout: table_wrappers
                 <li class="d-inline-block my-0{% unless forloop.last && !should_show_edit_link %} mr-2{% endunless %}"><a href="{{ link.last }}">{{ link.first }}</a></li>
               {% endfor %}
               {% if should_show_edit_link %}
-                <li class="d-inline-block my-0 mr-2"><a href="https://github.com/">Edit this page</a></li>
+                {% assign my_url = page.url %}
+                {% assign my_size = my_url | size | minus: 5 %}
+                {% assign my_edit_url = my_url | slice: 0, size %}
+                <li class="d-inline-block my-0 mr-2"><a href="https://github.com/LOST-STATS/LOST-STATS.github.io{{ my_edit_url }}.md">Edit this page</a></li>
               {% endif %}
             </ul>
           {% endif %}
