--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,9 @@ layout: table_wrappers
             <div class="js-search-results search-results-wrap"></div>
           </div>
           {% endif %}
-          {% assign should_show_edit_link = ((site.edit_links == true and page.edit_links != false) or page.edit_links == true) %}
+          {% assign global_edit_link = site.edit_links == true and page.edit_links != false %}
+          {% assign local_edit_link = page.edit_links == true %}
+          {% assign should_show_edit_link = global_edit_link or local_edit_link %}
           {% if site.aux_links != nil or should_show_edit_link %}
             <ul class="list-style-none text-small aux-nav">
               {% for link in site.aux_links %}
