--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@ layout: table_wrappers
             <div class="js-search-results search-results-wrap"></div>
           </div>
           {% endif %}
-          {% assign global_edit_link = site.edit_links == true and page.edit_links != false %}
-          {% assign local_edit_link = page.edit_links == true %}
-          {% assign should_show_edit_link = global_edit_link or local_edit_link %}
+          {% if site.edit_links == true and page.edit_links != false %}{% assign global_edit_link = true %}{% else %}{% assign global_edit_link = false %}{% endif %}
+          {% if page.edit_links == true %}{% assign local_edit_link = true %}{% else %}{% assign local_edit_link = false %}{% endif %}
+          {% if global_edit_link or local_edit_link %}{% assign should_show_edit_link = true %}{% else %}{% assign should_show_edit_link = false %}{% endif %}
           {% if site.aux_links != nil or should_show_edit_link %}
             <ul class="list-style-none text-small aux-nav">
               {% for link in site.aux_links %}
